first version that compile